k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-app
  namespace: dev
  labels:
    app: budget-app
spec:
  type: ClusterIP
  selector:
    app: budget-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
